--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,32 @@
+awsebcli==3.15.3
+botocore==1.12.243
+cement==2.8.2
+certifi==2019.9.11
+chardet==3.0.4
 Click==7.0
-Flask==1.1.1
-Flask-Cors==3.0.8
-Flask-SQLAlchemy==2.4.1
-Flask-WTF==0.14.2
+colorama==0.3.9
+docutils==0.15.2
+Flask==1.0.2
+future==0.16.0
+idna==2.7
+isort==4.3.4
 itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-six==1.13.0
-SQLAlchemy==1.2.0
-Werkzeug==0.16.0
-WTForms==2.2.1
+Jinja2==2.10
+jmespath==0.9.4
+lazy-object-proxy==1.3.1
+MarkupSafe==1.1.0
+mccabe==0.6.1
+numpy==1.16.0
+pandas==0.24.0
+pathspec==0.5.9
+python-dateutil==2.7.5
+pytz==2018.9
+PyYAML==3.13
+requests==2.20.1
+semantic-version==2.5.0
+six==1.11.0
+termcolor==1.1.0
+urllib3==1.24.3
+wcwidth==0.1.7
+Werkzeug==0.14.1
+wrapt==1.10.11
