--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 colorama==0.3.9
+crate
 docutils==0.15.2
 Flask==1.0.2
+flask_sqlalchemy
 future==0.16.0
 idna==2.7
 isort==4.3.4
@@ -20,6 +22,7 @@ numpy==1.16.0
 pandas==0.24.0
 pathspec==0.5.9
 python-dateutil==2.7.5
+python-dotenv
 pytz==2018.9
 PyYAML==3.13
 requests==2.20.1
@@ -28,5 +31,5 @@ six==1.11.0
 termcolor==1.1.0
 urllib3==1.24.3
 wcwidth==0.1.7
-Werkzeug==0.14.1
+Werkzeug==0.15.3
 wrapt==1.10.11
