--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,21 @@
 version: "3"
 services:
     app:
-        # build: .
+        restart: always
         build:
           context: .
           dockerfile: Dockerfile
+        environment:
+            - DATABASE_URI=${DATABASE_URI}
+            - SECRET=${SECRET}
         image: transitdata:latest
         depends_on:
           - cratedb
-        # links:
-        #     - cratedb
         ports:
             - "5000:5000"
         stdin_open: true
         tty: true
     cratedb:
-        # restart: always
         image: crate:latest
         ports:
           - "4200:4200"
-        environment:
-          - DATABASE_URI=crate://crate@cratedb:4200
-          - SECRET=1234
