--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ colorama==0.3.9
 crate
 docutils==0.15.2
 Flask==1.0.2
-flask_sqlalchemy
+Flask-SQLAlchemy
 future==0.16.0
 idna==2.7
 isort==4.3.4
@@ -22,7 +22,6 @@ numpy==1.16.0
 pandas==0.24.0
 pathspec==0.5.9
 python-dateutil==2.7.5
-python-dotenv
 pytz==2018.9
 PyYAML==3.13
 requests==2.20.1
@@ -31,5 +30,5 @@ six==1.11.0
 termcolor==1.1.0
 urllib3==1.24.3
 wcwidth==0.1.7
-Werkzeug==0.15.3
+Werkzeug==0.16
 wrapt==1.10.11
