--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+atomicwrites==1.3.0
+attrs==19.3.0
 awsebcli==3.15.3
 botocore==1.12.243
 cement==2.8.2
@@ -5,13 +7,14 @@ certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 colorama==0.3.9
-crate
+crate==0.23.2
 docutils==0.15.2
 Flask==1.0.2
-Flask-SQLAlchemy
-flask-cors
+Flask-Cors==3.0.8
+Flask-SQLAlchemy==2.4.1
 future==0.16.0
 idna==2.7
+importlib-metadata==1.3.0
 isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10
@@ -19,17 +22,27 @@ jmespath==0.9.4
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.0
 mccabe==0.6.1
-numpy==1.16.0
+more-itertools==8.0.2
+numpy==1.18.0
+packaging==19.2
 pandas==0.24.0
 pathspec==0.5.9
+pluggy==0.13.1
+py==1.8.0
+pyparsing==2.4.6
+# pypiwin32==223
+pytest==5.3.2
 python-dateutil==2.7.5
 pytz==2018.9
+# pywin32==227
 PyYAML==3.13
 requests==2.20.1
 semantic-version==2.5.0
 six==1.11.0
+# SQLAlchemy==1.3.12
 termcolor==1.1.0
 urllib3==1.24.3
 wcwidth==0.1.7
-Werkzeug==0.16
+Werkzeug==0.16.0
 wrapt==1.10.11
+zipp==0.6.0
